force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/GSC_Web_to_Case_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>This Metadata is a part of web to case form for mapping case category and Case sub Category from web to case inquiry type and Sub inquiry type 

#13866</description>
    <label>Web to Case Assignment</label>
    <pluralLabel>Web to Case Assignments</pluralLabel>
</CustomObject>