force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/fields/GSC_Case_Category__c.field-meta.xml
<CustomField>
    <fullName>GSC_Case_Category__c</fullName>
    <description>13866 This Metadata field is a part of web to case form for mapping GSC_Case_Category</description>
    <label>GSC Case Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>