force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/fields/India_Queue__c.field-meta.xml
<CustomField>
    <fullName>India_Queue__c</fullName>
    <label>India Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>