force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/fields/Indonesia_English_Queue__c.field-meta.xml
<CustomField>
    <fullName>Indonesia_English_Queue__c</fullName>
    <label>Indonesia English Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>