force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/fields/Inquiry_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Sub_Type__c</fullName>
    <description>13866 This Metadata field is a part of web to case form for mapping for mapping GSC_Category and GSC_Sub_Category by checking Inquiry Sub type and Inquiry Type</description>
    <label>Inquiry Sub Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>