force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/fields/Malaysia_Queue__c.field-meta.xml
<CustomField>
    <fullName>Malaysia_Queue__c</fullName>
    <label>Malaysia Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>