force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/fields/Singapore_Queue__c.field-meta.xml
<CustomField>
    <fullName>Singapore_Queue__c</fullName>
    <label>Singapore Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>