force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/fields/South_Korea_Queue__c.field-meta.xml
<CustomField>
    <fullName>South_Korea_Queue__c</fullName>
    <label>South Korea Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>