force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/fields/Thai_Queue__c.field-meta.xml
<CustomField>
    <fullName>Thai_Queue__c</fullName>
    <label>Thai Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>