force-app/main/default/objects/GSC_Web_to_Case_Assignment__mdt/listViews/All_list.listView-meta.xml
<ListView>
    <fullName>All_list</fullName>
    <columns>MasterLabel</columns>
    <columns>Inquiry_Type__c</columns>
    <columns>Inquiry_Sub_Type__c</columns>
    <columns>Additional_Inquiry_Sub_type__c</columns>
    <columns>GSC_Case_Category__c</columns>
    <columns>GSC_Case_Sub_Category__c</columns>
    <columns>Assign_Queue__c</columns>
    <columns>UKI_Queues__c</columns>
    <filterScope>Everything</filterScope>
    <label>All_list</label>
    <language>en_IN</language>
</ListView>